--- a/detail-track.html
+++ b/detail-track.html
@@ -32,7 +32,7 @@
     </nav>
     </header>
     <main>
-        <section>
+        <section class="justin">
             <img src="./img/justin-bieber-justice.jpeg" alt="">
             <h1>Peaches - Justin Bieber</h1>
             <p>Justice</p>
