--- a/playlists.html
+++ b/playlists.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,12 +23,14 @@
                             <a href="generos.html">Géneros</a>
                     </div>
             </section>
-            <div class="perfil-menu">
-                    <section class="icperfil">
-                            <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
-                    </section>
-            </div>
     </nav>
     </header>
+    <section class="misplaylists">
+            <div class="playlist">
+                    <ul>
+                       <il></il>     
+                    </ul>
+            </div>
+    </section>
 </body>
 </html>
