--- a/detail-artist.html
+++ b/detail-artist.html
@@ -8,28 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
-    <nav class="header-items">
-            <section class="BarraDeBusqueda">
-                    <form action="results.html" method="GET" class="buscar">
-                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                            <button type="submit" class="button">Buscar</button>
-                    </form>
-                    <div class="menu">
-                            <a href="artistas.html">Artistas |</a>
-                            <a href="albumes.html">Albumes |</a>
-                            <a href="playlists.html">Playlists |</a>
-                            <a href="generos.html">Géneros</a>
-                    </div>
-            </section>
-            <div class="perfil-menu">
-                    <section class="icperfil">
-                            <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
-                    </section>
-            </div>
-    </nav>
-    </header>
+        <header>
+                <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                <article class="cajainicio">
+                    <nav class="header-items">
+                        <section class="BarraDeBusqueda">
+                                <form action="search-results.html" method="GET" class="buscar">
+                                        <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                                        <button type="submit" class="button">Buscar</button>
+                                </form>
+                                <div class="menu">
+                                        <a href="index.html">Home |</a>  
+                                        <a href="artistas.html">Artistas |</a>
+                                        <a href="albumes.html">Albumes |</a>
+                                        <a href="playlists.html">Playlists |</a>
+                                        <a href="generos.html">Géneros</a>
+                                </div>
+                        </section>
+                        <div class="perfil-menu">
+                                <section class="icperfil">
+                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
+                                </section>
+                        </div>
+                </nav>
+                </article>
+            </header>
     <main>
         <section>
             <img src="./img/justin-bieber-justice.jpeg" alt="">
