--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                                 <button type="submit" class="button">Buscar</button>
                         </form>
                         <div class="menu">
+                                <a href="index.html">Home |</a>  
                                 <a href="artistas.html">Artistas |</a>
                                 <a href="albumes.html">Albumes |</a>
                                 <a href="playlists.html">Playlists |</a>
