--- a/albumes.html
+++ b/albumes.html
@@ -4,30 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Albumes</title>
 </head>
 <body>
     <header>
-        <img src="" alt="logo">
-    <nav class="header-items">
-            <section class="BarraDeBusqueda">
-                    <form action="results.html" method="GET" class="buscar">
-                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                            <button type="submit" class="button">Buscar</button>
-                    </form>
-                    <div class="menu">
-                            <a href="artistas.html">Artistas |</a>
-                            <a href="albumes.html">Albumes |</a>
-                            <a href="playlists.html">Playlists |</a>
-                            <a href="generos.html">Géneros</a>
-                    </div>
-            </section>
-            <div class="perfil-menu">
-                    <section class="icperfil">
-                            <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
-                    </section>
-            </div>
-    </nav>
+        <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+        <article class="cajainicio">
+            <nav class="header-items">
+                <section class="BarraDeBusqueda">
+                        <form action="search-results.html" method="GET" class="buscar">
+                                <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                                <button type="submit" class="button">Buscar</button>
+                        </form>
+                        <div class="menu">
+                                <a href="index.html">Home |</a>  
+                                <a href="artistas.html">Artistas |</a>
+                                <a href="albumes.html">Albumes |</a>
+                                <a href="playlists.html">Playlists |</a>
+                                <a href="generos.html">Géneros</a>
+                        </div>
+                </section>
+                <div class="perfil-menu">
+                        <section class="icperfil">
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
+                        </section>
+                </div>
+        </nav>
+        </article>
     </header>
+    <footer> <div class="footer">
+                
+        <div class="instagram">
+                <div class="seguinos">Seguinos:</div>
+                <div>
+                <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                </div>
+        </div>
+
+        <div class="equipo">
+                <h3>Equipo:</h3>
+                <ul class="miembros">
+                    <li class="nombre">Hania Achaval</li>
+                    <li class="nombre">Justina Basombrio</li>
+                    <li class="nombre">Malena Bensadon</li>
+                </ul>
+        </div>
+</div>
+         </footer>
 </body>
 </html>
