--- a/generos.html
+++ b/generos.html
@@ -4,30 +4,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Generos</title>
 </head>
 <body>
-    <header>
-        <img src="" alt="logo">
-    <nav class="header-items">
-            <section class="BarraDeBusqueda">
-                    <form action="results.html" method="GET" class="buscar">
-                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                            <button type="submit" class="button">Buscar</button>
-                    </form>
-                    <div class="menu">
-                            <a href="artistas.html">Artistas |</a>
-                            <a href="albumes.html">Albumes |</a>
-                            <a href="playlists.html">Playlists |</a>
-                            <a href="generos.html">Géneros</a>
-                    </div>
-            </section>
-            <div class="perfil-menu">
-                    <section class="icperfil">
-                            <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
-                    </section>
-            </div>
-    </nav>
-    </header>
+        <header>
+                <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                <article class="cajainicio">
+                    <nav class="header-items">
+                        <section class="BarraDeBusqueda">
+                                <form action="search-results.html" method="GET" class="buscar">
+                                        <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                                        <button type="submit" class="button">Buscar</button>
+                                </form>
+                                <div class="menu">
+                                        <a href="index.html">Home |</a>  
+                                        <a href="artistas.html">Artistas |</a>
+                                        <a href="albumes.html">Albumes |</a>
+                                        <a href="playlists.html">Playlists |</a>
+                                        <a href="generos.html">Géneros</a>
+                                </div>
+                        </section>
+                        <div class="perfil-menu">
+                                <section class="icperfil">
+                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
+                                </section>
+                        </div>
+                </nav>
+                </article>
+            </header>
+    <div class="containergenerosg">
+            <section class="generosg">
+              <div class="latino">
+                <ul>
+                        <li>Latino</li>
+                        <img src="./img/Alohamaluma.jpeg" alt="FOTO GENERO LATINO">
+                </ul>
+              </div>
+             <div class="pop">
+               <ul>
+                       <li>Pop</li>
+                       <img src="./img/justin-bieber-justice.jpeg" alt="FOTO GENERO POP">
+               </ul>
+       </div>
+       <div class="rocknacional">
+               <ul>
+                       <li>Rock Nacional</li>
+                       <img src="./img/terminales.jpg" alt="FOTO GENERO ROCK NACIONAL">
+               </ul>
+       </div>
+       <div class="hippie">
+               <ul>
+                       <li>Hippie</li>
+                       <img src="./img/bobmarleynowoman.jpg" alt="FOTO GENERO HIPPIE">
+               </ul>
+       </div>
+</div>
+   </section>
+   <footer> <div class="footer">
+                
+        <div class="instagram">
+                <div class="seguinos">Seguinos:</div>
+                <div>
+                <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                </div>
+        </div>
+
+        <div class="equipo">
+                <h3>Equipo:</h3>
+                <ul class="miembros">
+                    <li class="nombre">Hania Achaval</li>
+                    <li class="nombre">Justina Basombrio</li>
+                    <li class="nombre">Malena Bensadon</li>
+                </ul>
+        </div>
+</div>
+         </footer>
 </body>
 </html>
