--- a/index.html
+++ b/index.html
@@ -40,31 +40,30 @@
             
                <ul class="listas">
                
-                <il class="caja">
-                    <a href="./detail-track.html">Peaches -</a>
-                    <a href="./detail-artist.html">Justin Bieber</a>
+                <li class="caja">
+                    <a href="./detail-track.html">Peaches -Justin Bieber</a>
                     <a href="./detail-track.html"><img class="fotos" src="./img/justin-bieber-justice.jpeg" alt=""></a>
-                </il>
+                </li>
 
-                <il class="caja">
+                <li class="caja">
                     <a href="./detail-track.html">Aloha - Maluma</a>
                     <a href="./detail-track.html"><img class="fotos" src="./img/Alohamaluma.jpeg" alt=""></a>
-                </il>
+                </li>
 
-                <il class="caja">
+                <li class="caja">
                     <a href="./detail-track.html">Eye of the Tiger - Survior</a>
                     <a href="./detail-track.html"><img class="fotos" src="./img/Eye-of-the-Tiger.jpeg" alt=""></a>
-                </il>
+                </li>
 
-                <il class="caja">
+                <li class="caja">
                     <a href="./detail-track.html">No Woman No Cry - Bob Marley</a>
                     <a href="./detail-track.html"><img class="fotos" src="./img/bobmarleynowoman.jpg" alt=""></a>
-                </il>
+                </li>
 
-                <il class="caja">
+                <li class="caja">
                     <a href="./detail-track.html">Terminales - Cruzando el Charco</a>
                     <a href="./detail-track.html"><img class="fotos" src="./img/terminales.jpg" alt=""></a>
-                </il>
+                </li>
 
             </ul> 
 
