--- a/detail-album.html
+++ b/detail-album.html
@@ -33,6 +33,33 @@
         </nav>
         </article>
     </header>
+    <main>
+        <section class="detallealbum">
+                <img class="fotochanges" src="./img/changes.jpg" alt="">
+                <h2>Changes - Justin Bieber</h2>
+                <p>Lanzamiento: 14 de Febrero, 2020</p>
+                <p>Generos: Pop, R&B contemporáneo, R&B alternativo</p>
+                <ul class="listadetallealbum">
+                        <li>All Around Me</li>
+                        <li>Habitual</li>
+                        <li>Come Around Me</li>
+                        <li>Intentions</li>
+                        <li>Yummy</li>
+                        <li>Available</li>
+                        <li>Forever</li>
+                        <li>Running Over</li>
+                        <li>Take It Out On Me</li>
+                        <li>Second Emotion</li>
+                        <li>Get Me</li>
+                        <li>E.T.A.</li>
+                        <li>Changes</li>
+                        <li>Confirmation</li>
+                        <li>That's What Love Is</li>
+                        <li>At Least for Now</li>
+                        <li>Yummy (Summer Walker Remix)</li>
+                </ul>
+            </section>
+    </main>
     <footer> <div class="footer">
                 
         <div class="instagram">
