--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Justin Bieber</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/justin.jpg" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/justin2.jpg" alt=""></a>
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Tini</a>
@@ -108,7 +108,7 @@
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Bob Marley</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/MarleyB.jpg" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/MarleyB2.jpg" alt=""></a>
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Ricky Martin</a>
@@ -116,7 +116,7 @@
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Harry Styles</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/harry.png" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
                 </li>
             </ul>
 
