--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
 
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Justin Bieber</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/justin2.jpg" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/justin4.jpg" alt=""></a>
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Tini</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/retratotini.jpg" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Bob Marley</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/MarleyB2.jpg" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Ricky Martin</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/ricky.jpg" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
                 </li>
                 <li class="caja">
                     <a href="./detail-track.html" class="names">Harry Styles</a>
