--- a/generos.html
+++ b/generos.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
     <link rel="stylesheet" href="./css/styles.css">
     <title>Generos</title>
 </head>
 <body>
         <header>
-                <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
                 <article class="cajainicio">
                     <nav class="header-items">
                         <section class="BarraDeBusqueda">
-                                <form action="search-results.html" method="GET" class="buscar">
-                                        <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                                        <button type="submit" class="button">Buscar</button>
-                                </form>
                                 <div class="menu">
-                                        <a href="index.html">Home |</a>  
-                                        <a href="artistas.html">Artistas |</a>
-                                        <a href="albumes.html">Albumes |</a>
-                                        <a href="playlists.html">Playlists |</a>
-                                        <a href="generos.html">Géneros</a>
+                                    <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                                        <a href="index.html" class="barratexto">Home</a>  
+                                        <a href="artistas.html" class="barratexto">Artistas</a>
+                                        <a href="albumes.html" class="barratexto">Albumes</a>
+                                        <a href="playlists.html" class="barratexto">Playlists</a>
+                                        <a href="generos.html" class="barratexto">Géneros</a>
                                 </div>
+                                <form action="search-results.html" method="GET" class="buscar">
+                                    <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                                    <button type="submit" class="button">Buscar</button>
+                            </form>
                         </section>
                         <div class="perfil-menu">
                                 <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
+                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user">Log in</p></a>
                                 </section>
                         </div>
                 </nav>
