--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>SOUNDNOW</title>
+    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
+    <title>  SOUND-NOW</title>
 </head>
 <body>
     <header>
@@ -37,7 +38,7 @@
     <main>
         <div class="container">
 
-            <h1 class="titulos">Songs</h1>
+            <h2 class="titulos">Songs</h2>
             
                <ul class="listas">
                
@@ -68,7 +69,7 @@
 
             </ul> 
 
-            <h1 class="titulos">Albums</h1>
+            <h2 class="titulos">Albums</h2>
 
             <ul class="listas">
 
@@ -94,7 +95,7 @@
                 </li>
             </ul>
 
-            <h1 class="titulos">Artists</h1>
+            <h2 class="titulos">Artists</h2>
 
             <ul class="listas">
 
