--- a/perfil.html
+++ b/perfil.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
     <title>Document</title>
 </head>
 <body>
@@ -34,5 +35,47 @@
         </nav>
         </article>
     </header>
+    <main class="formulario">
+        <div class="slider">
+            <ul>
+                    <li><img src="img/auriculares.jpg" alt=""></li>
+                    <li><img src="img/fiesta.jpg" alt=""></li>
+                    <li><img src="img/parlante.jpg" alt=""></li>
+                    <li><img src="img/colores.jpg" alt=""></li>
+            </ul>   
+            </div>
+        <form action="" method="GET"> 
+            <div>
+                    <input type="text" name="user" placeholder="Nombre de Usuario" class="nombreu">
+            </div>
+            <div>
+                <input type="mail" name="mail" placeholder="Correo electrónico" class="mail">
+            </div>
+            <div>
+                <input type="contraseña" name="ontraseña" placeholder="Contraseña" class="contrasena">
+            </div>
+            <button type="submit" id="boton">Inicia Sesión</button>
+            </form> 
+           <a href="index.html"class="volverainicio">Volver a inicio</a>
+    </main>
+    <footer> <div class="footer">
+                
+        <div class="instagram">
+                <div class="seguinos">Seguinos:</div>
+                <div>
+                <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                </div>
+        </div>
+
+        <div class="equipo">
+                <h3>Equipo:</h3>
+                <ul class="miembros">
+                    <li class="nombre">Hania Achaval</li>
+                    <li class="nombre">Justina Basombrio</li>
+                    <li class="nombre">Malena Bensadon</li>
+                </ul>
+        </div>
+</div>
+         </footer>
 </body>
 </html>
