--- a/detail-track.html
+++ b/detail-track.html
@@ -5,29 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
     <title>Detalles de la cancion</title>
 </head>
 <body>
         <header>
-                <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
                 <article class="cajainicio">
                     <nav class="header-items">
                         <section class="BarraDeBusqueda">
-                                <form action="search-results.html" method="GET" class="buscar">
-                                        <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                                        <button type="submit" class="button">Buscar</button>
-                                </form>
                                 <div class="menu">
-                                        <a href="index.html">Home |</a>  
-                                        <a href="artistas.html">Artistas |</a>
-                                        <a href="albumes.html">Albumes |</a>
-                                        <a href="playlists.html">Playlists |</a>
-                                        <a href="generos.html">Géneros</a>
+                                    <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                                        <a href="index.html" class="barratexto">Home</a>  
+                                        <a href="artistas.html" class="barratexto">Artistas</a>
+                                        <a href="albumes.html" class="barratexto">Albumes</a>
+                                        <a href="playlists.html" class="barratexto">Playlists</a>
+                                        <a href="generos.html" class="barratexto">Géneros</a>
                                 </div>
+                                <form action="search-results.html" method="GET" class="buscar">
+                                    <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                                    <button type="submit" class="button">Buscar</button>
+                            </form>
                         </section>
                         <div class="perfil-menu">
                                 <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user3">Log in</p></a>
+                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user">Log in</p></a>
                                 </section>
                         </div>
                 </nav>
@@ -42,5 +43,24 @@
             <p>Artistas invitados: Daniel Caesar, Giveon</p>
         </section>
     </main>
+    <footer> <div class="footer">
+                
+        <div class="instagram">
+                <div class="seguinos">Seguinos:</div>
+                <div>
+                <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                </div>
+        </div>
+
+        <div class="equipo">
+                <h3>Equipo:</h3>
+                <ul class="miembros">
+                    <li class="nombre">Hania Achaval</li>
+                    <li class="nombre">Justina Basombrio</li>
+                    <li class="nombre">Malena Bensadon</li>
+                </ul>
+        </div>
+</div>
+         </footer>
 </body>
 </html>
