--- a/detail-album.html
+++ b/detail-album.html
@@ -37,9 +37,9 @@
     <main>
         <section class="detallealbum">
                 <img class="fotochanges" src="./img/changes.jpg" alt="">
-                <h2>Changes - Justin Bieber</h2>
-                <p>Lanzamiento: 14 de Febrero, 2020</p>
-                <p>Generos: Pop, R&B contemporáneo, R&B alternativo</p>
+                <h2 class="textochanges">Changes - Justin Bieber</h2>
+                <p class="textochanges"> Lanzamiento: 14 de Febrero, 2020</p>
+                <p class="textochanges">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
                 <ul class="listadetallealbum">
                         <li>All Around Me</li>
                         <li>Habitual</li>
