--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="container">
 
-            <h2 class="titulos">Songs</h2>
+            <h2 class="titulos">Canciones</h2>
             
                <ul class="listas">
                
@@ -69,7 +69,7 @@
 
             </ul> 
 
-            <h2 class="titulos">Albums</h2>
+            <h2 class="titulos">Álbumes</h2>
 
             <ul class="listas">
 
@@ -95,7 +95,7 @@
                 </li>
             </ul>
 
-            <h2 class="titulos">Artists</h2>
+            <h2 class="titulos">Artistas</h2>
 
             <ul class="listas">
 
