--- a/albumes.html
+++ b/albumes.html
@@ -35,6 +35,35 @@
                 </nav>
                 </article>
             </header>
+            <main>
+                <section class="albumescaja">
+                        <h2 class="albumespag">Albumes</h2>
+                        <ul class="listas">
+
+                                <li class="caja">
+                                    <a href="./detail-album.html" class="names">x (Deluxe Version) - Ed Sheeran</a>
+                                    <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
+                                </li>
+                                <li class="caja">
+                                    <a href="./detail-album.html" class="names">Evolve - Imagine Dragons</a>
+                                    <a href="./detail-album.html"><img class="fotos" src="./img/evolve imagine dragons.jpg" alt=""></a>
+                                </li>
+                                <li class="caja">
+                                    <a href="./detail-album.html" class="names">Changes - Justin Bieber</a>
+                                    <a href="./detail-album.html"><img class="fotos" src="./img/changes.jpg" alt=""></a>
+                                </li>
+                                <li class="caja">
+                                    <a href="./detail-album.html" class="names">TINI TINI TINI - Tini</a>
+                                    <a href="./detail-album.html"><img class="fotos" src="./img/tini.jpg" alt=""></a>
+                                </li>
+                                <li class="caja">
+                                    <a href="./detail-album.html" class="names">Heathens - Twenty One Pilots</a>
+                                    <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
+                                </li>
+                            </ul>
+        
+                </section>
+                    </main>
             <footer> <div class="footer">
                 
                 <div class="instagram">
