--- a/artistas.html
+++ b/artistas.html
@@ -34,6 +34,35 @@
                 </nav>
                 </article>
             </header>
+            <main>
+        <section class="artistascaja">
+                <h2 class="artistaspag">Artistas</h2>
+
+                <ul class="listas">
+    
+                    <li class="caja">
+                        <a href="./detail-artist.html" class="names">Justin Bieber</a>
+                        <a href="./detail-artist.html"><img class="fotos" src="./img/justin4.jpg" alt=""></a>
+                    </li>
+                    <li class="caja">
+                        <a href="./detail-artist.html" class="names">Tini</a>
+                        <a href="./detail-artist.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
+                    </li>
+                    <li class="caja">
+                        <a href="./detail-artist.html" class="names">Bob Marley</a>
+                        <a href="./detail-track.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
+                    </li>
+                    <li class="caja">
+                        <a href="./detail-artist.html" class="names">Ricky Martin</a>
+                        <a href="./detail-artist.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
+                    </li>
+                    <li class="caja">
+                        <a href="./detail-artist.html" class="names">Harry Styles</a>
+                        <a href="./detail-artist.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
+                    </li>
+                </ul>
+        </section>
+            </main>
             <footer> <div class="footer">
                 
                 <div class="instagram">
