--- a/detail-artist.html
+++ b/detail-artist.html
@@ -34,6 +34,21 @@
         </nav>
         </article>
     </header>
+    <main>
+            <section>
+                    <article class="marley">
+                            <h1>Bob Marley & The Wailers</h1>
+                            <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                            <ul class="bobtopfive">
+                                    <li>Three Little Birds</li>
+                                    <li>Could You Be Loved</li>
+                                    <li>Is This Love</li>
+                                    <li>Jamming</li>
+                                    <li>One Love / People Get Ready</li>
+                            </ul>
+                    </article>
+            </section>
+    </main>
     <footer> <div class="footer">
         
         <div class="instagram">
