--- a/generos.html
+++ b/generos.html
@@ -56,7 +56,7 @@
        </div>
        <div class="hippie">
                <ul>
-                       <li>Hippie</li>
+                       <li>Reggae</li>
                        <img src="./img/bobmarleynowoman.jpg" alt="FOTO GENERO HIPPIE">
                </ul>
        </div>
