--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </section>
                 <div class="perfil-menu">
                         <section class="icperfil">
-                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user">Log in</p></a>
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
                         </section>
                 </div>
         </nav>
@@ -74,7 +74,7 @@
             <ul class="listas">
 
                 <li class="caja">
-                    <a href="./detail-album.html" class="names">x (Deluxe Version)</a>
+                    <a href="./detail-album.html" class="names">x (Deluxe Version) - Ed Sheeran</a>
                     <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
                 </li>
                 <li class="caja">
@@ -100,24 +100,24 @@
             <ul class="listas">
 
                 <li class="caja">
-                    <a href="./detail-track.html" class="names">Justin Bieber</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/justin4.jpg" alt=""></a>
+                    <a href="./detail-artist.html" class="names">Justin Bieber</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/justin4.jpg" alt=""></a>
                 </li>
                 <li class="caja">
-                    <a href="./detail-track.html" class="names">Tini</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
+                    <a href="./detail-artist.html" class="names">Tini</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
                 </li>
                 <li class="caja">
-                    <a href="./detail-track.html" class="names">Bob Marley</a>
+                    <a href="./detail-artist.html" class="names">Bob Marley</a>
                     <a href="./detail-track.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
                 </li>
                 <li class="caja">
-                    <a href="./detail-track.html" class="names">Ricky Martin</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
+                    <a href="./detail-artist.html" class="names">Ricky Martin</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
                 </li>
                 <li class="caja">
-                    <a href="./detail-track.html" class="names">Harry Styles</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
+                    <a href="./detail-artist.html" class="names">Harry Styles</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
                 </li>
             </ul>
 
