--- a/albumes.html
+++ b/albumes.html
@@ -36,8 +36,8 @@
                 </article>
             </header>
             <main>
-                <section class="albumescaja">
-                        <h2 class="albumespag">Albumes</h2>
+                <section class="acaja">
+                        <h2 class="pag">Albumes</h2>
                         <ul class="listas">
 
                                 <li class="caja">
