--- a/artistas.html
+++ b/artistas.html
@@ -35,8 +35,8 @@
                 </article>
             </header>
             <main>
-        <section class="artistascaja">
-                <h2 class="artistaspag">Artistas</h2>
+        <section class="acaja">
+                <h2 class="pag">Artistas</h2>
 
                 <ul class="listas">
     
