--- a/generos.html
+++ b/generos.html
@@ -34,34 +34,49 @@
                 </nav>
                 </article>
             </header>
-    <div class="containergenerosg">
-            <section class="generosg">
-              <div class="latino">
+
+    <div class="acaja">
+            <h2 class="pag"> Generos</h2>
+            <section class="listas">
+              <div class="caja">
                 <ul>
                         <li>Latino</li>
-                        <img src="./img/Alohamaluma.jpeg" alt="FOTO GENERO LATINO">
+                        <a href="./detail-album.html" class="names">LATINO</a>
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/latino.jpg" alt="FOTO GENERO LATINO"></a>
                 </ul>
               </div>
-             <div class="pop">
+             <div class="caja">
                <ul>
                        <li>Pop</li>
-                       <img src="./img/justin-bieber-justice.jpeg" alt="FOTO GENERO POP">
+                        <a href="./detail-album.html" class="names">POP</a>
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/pop (1).jpg" alt="FOTO GENERO POP"></a>
                </ul>
        </div>
-       <div class="rocknacional">
+       <div class="caja">
                <ul>
                        <li>Rock Nacional</li>
-                       <img src="./img/terminales.jpg" alt="FOTO GENERO ROCK NACIONAL">
+                       <a href="./detail-album.html" class="names">ROCK NACIONAL</a>
+                       <a href="./detail-genres.html"><img class="fotos" src="./img/nacionalr.jpg" alt="FOTO GENERO ROCK NACIONAL"></a>
                </ul>
        </div>
-       <div class="hippie">
+       <div class="caja">
                <ul>
                        <li>Reggae</li>
-                       <img src="./img/bobmarleynowoman.jpg" alt="FOTO GENERO HIPPIE">
+                       <a href="./detail-album.html" class="names">REGGUE</a>
+                       <a href="./detail-genres.html"><img class="fotos" src="./img/reggae.jpg" alt="FOTO GENERO HIPPIE"></a>
                </ul>
        </div>
+       <div class="caja">
+        <ul>
+                <li>Reggae</li>
+                <a href="./detail-album.html" class="names">CLASICA</a>
+                <a href="./detail-genres.html"><img class="fotos" src="./img/clasica.jfif" alt="FOTO GENERO HIPPIE"></a>
+        </ul>
+</div>
 </div>
    </section>
+            </main>
+
    <footer> <div class="footer">
                 
         <div class="instagram">
