--- a/generos.html
+++ b/generos.html
@@ -70,7 +70,7 @@
         <ul>
                 <li>Reggae</li>
                 <a href="./detail-album.html" class="names">CLASICA</a>
-                <a href="./detail-genres.html"><img class="fotos" src="./img/clasica.jfif" alt="FOTO GENERO HIPPIE"></a>
+                <a href="./detail-genres.html"><img class="fotos" src="./img/clasicam.jpg" alt="FOTO GENERO HIPPIE"></a>
         </ul>
 </div>
 </div>
