--- a/generos.html
+++ b/generos.html
@@ -36,7 +36,7 @@
             </header>
 
     <div class="acaja">
-            <h2 class="pag"> Generos</h2>
+            <h2 class="pag"> Géneros</h2>
             <section class="listas">
               <div class="caja">
                 <ul>
@@ -62,14 +62,14 @@
        <div class="caja">
                <ul>
                        <li>Reggae</li>
-                       <a href="./detail-album.html" class="names">REGGUE</a>
+                       <a href="./detail-album.html" class="names">REGGAE</a>
                        <a href="./detail-genres.html"><img class="fotos" src="./img/reggae.jpg" alt="FOTO GENERO HIPPIE"></a>
                </ul>
        </div>
        <div class="caja">
         <ul>
                 <li>Reggae</li>
-                <a href="./detail-album.html" class="names">CLASICA</a>
+                <a href="./detail-album.html" class="names">CLÁSICA</a>
                 <a href="./detail-genres.html"><img class="fotos" src="./img/clasicam.jpg" alt="FOTO GENERO HIPPIE"></a>
         </ul>
 </div>
