--- a/detail-genres.html
+++ b/detail-genres.html
@@ -34,24 +34,25 @@
                 </nav>
                 </article>
             </header>
-    <footer> <div class="footer">
+        <footer> 
+        <div class="footer">
                 
-        <div class="instagram">
+         <div class="instagram">
                 <div class="seguinos">Seguinos:</div>
                 <div>
                 <a href="https://www.instagram.com/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
                 </div>
-        </div>
+         </div>
 
-        <div class="equipo">
+         <div class="equipo">
                 <h3>Equipo:</h3>
                 <ul class="miembros">
                     <li class="nombre">Hania Achaval</li>
                     <li class="nombre">Justina Basombrio</li>
                     <li class="nombre">Malena Bensadon</li>
                 </ul>
-        </div>
-</div>
+         </div>
+         </div>
          </footer>
 </body>
 </html>
