--- a/detail-artist.html
+++ b/detail-artist.html
@@ -35,10 +35,10 @@
         </article>
     </header>
     <main>
-            <section>
-                    <article class="marley">
-                            <h1>Bob Marley & The Wailers</h1>
-                            <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+            <section class="detallealbum">
+                    <article class="artista">
+                            <h1>Justin Bieber</h1>
+                            <img src="./img/justin4.jpg" alt="" class="fotobob">
                             <ul class="bobtopfive">
                                     <li>Three Little Birds</li>
                                     <li>Could You Be Loved</li>
@@ -47,6 +47,50 @@
                                     <li>One Love / People Get Ready</li>
                             </ul>
                     </article>
+                    <article class="artista">
+                        <h1>Bob Marley & The Wailers</h1>
+                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                        <ul class="bobtopfive">
+                                <li>Three Little Birds</li>
+                                <li>Could You Be Loved</li>
+                                <li>Is This Love</li>
+                                <li>Jamming</li>
+                                <li>One Love / People Get Ready</li>
+                        </ul>
+                </article>
+                <article class="artista">
+                        <h1>Bob Marley & The Wailers</h1>
+                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                        <ul class="bobtopfive">
+                                <li>Three Little Birds</li>
+                                <li>Could You Be Loved</li>
+                                <li>Is This Love</li>
+                                <li>Jamming</li>
+                                <li>One Love / People Get Ready</li>
+                        </ul>
+                </article>
+                <article class="artista">
+                        <h1>Bob Marley & The Wailers</h1>
+                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                        <ul class="bobtopfive">
+                                <li>Three Little Birds</li>
+                                <li>Could You Be Loved</li>
+                                <li>Is This Love</li>
+                                <li>Jamming</li>
+                                <li>One Love / People Get Ready</li>
+                        </ul>
+                </article>
+                <article class="artista">
+                        <h1>Bob Marley & The Wailers</h1>
+                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                        <ul class="bobtopfive">
+                                <li>Three Little Birds</li>
+                                <li>Could You Be Loved</li>
+                                <li>Is This Love</li>
+                                <li>Jamming</li>
+                                <li>One Love / People Get Ready</li>
+                        </ul>
+                </article>
             </section>
     </main>
     <footer> <div class="footer">
