--- a/detail-album.html
+++ b/detail-album.html
@@ -37,7 +37,7 @@
     <main>
         <section class="detallealbum">
                 <div class="album">
-                        <img class="fotoalbum" src="./img/changes.jpg" alt="">
+                        <img class="fotoa" src="./img/changes.jpg" alt="">
                         <h2 class="texto">Changes - Justin Bieber</h2>
                         <p class="texto"> Lanzamiento: 14 de Febrero, 2020</p>
                         <p class="texto">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
@@ -62,7 +62,7 @@
                         </ol>      
                 </div>
                 <div class="album">
-                        <img class="fotoalbum" src="./img/x.jpg" alt="">
+                        <img class="fotoa" src="./img/x.jpg" alt="">
                         <h2 class="texto">x (Deluxe Version) - Ed Sheeran</h2>
                         <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
                         <p class="texto">Generos: Pop, R&B y hip hop</p>
@@ -86,7 +86,7 @@
                         </ol>      
                 </div>
                 <div class="album">
-                        <img class="fotoalbum" src="./img/evolve imagine dragons.jpg" alt="">
+                        <img class="fotoa" src="./img/evolve imagine dragons.jpg" alt="">
                         <h2 class="texto">Evolve - Imagine Dragons</h2>
                         <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
                         <p class="texto">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</p>
@@ -105,7 +105,7 @@
                         </ol>      
                 </div>
                 <div class="album">
-                        <img class="fotoalbum" src="./img/tini.jpg" alt="">
+                        <img class="fotoa" src="./img/tini.jpg" alt="">
                         <h2 class="texto">TINI TINI TINI - Tini</h2>
                         <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
                         <p class="texto">Generos: Pop, reguetón, balada, trap</p>
@@ -127,7 +127,7 @@
                         </ol>      
                 </div>
                 <div class="album">
-                        <img class="fotoalbum" src="./img/Heathens.jpg" alt="">
+                        <img class="fotoa" src="./img/Heathens.jpg" alt="">
                         <h2 class="texto">Heathens - Twenty One Pilots</h2>
                         <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
                         <p class="texto">Generos: Rap rock</p>
