--- a/detail-artist.html
+++ b/detail-artist.html
@@ -38,18 +38,29 @@
             <section class="detallealbum">
                     <article class="artista">
                             <h1>Justin Bieber</h1>
-                            <img src="./img/justin4.jpg" alt="" class="fotobob">
+                            <img src="./img/justin4.jpg" alt="" class="fotoa">
                             <ul class="bobtopfive">
-                                    <li>Three Little Birds</li>
-                                    <li>Could You Be Loved</li>
-                                    <li>Is This Love</li>
-                                    <li>Jamming</li>
-                                    <li>One Love / People Get Ready</li>
+                                    <li>Sorry</li>
+                                    <li>Baby</li>
+                                    <li>What do you mean?</li>
+                                    <li>Love Yourself</li>
+                                    <li>Boyfriend</li>
                             </ul>
-                    </article>
-                    <article class="artista">
+                 </article>
+                <article class="artista">
+                        <h1>Tini</h1>
+                        <img src="./img/retratotini2.jpg" alt="" class="fotoa">
+                        <ul class="bobtopfive">
+                                <li>Fresa</li>
+                                <li>Sad Song</li>
+                                <li>Suéltate el pelo</li>
+                                <li>Consejo de amor</li>
+                                <li>Quiero volver</li>
+                        </ul>
+                </article>
+                <article class="artista">
                         <h1>Bob Marley & The Wailers</h1>
-                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                        <img src="./img/bob-marley.jpg" alt="" class="fotoa">
                         <ul class="bobtopfive">
                                 <li>Three Little Birds</li>
                                 <li>Could You Be Loved</li>
@@ -59,36 +70,25 @@
                         </ul>
                 </article>
                 <article class="artista">
-                        <h1>Bob Marley & The Wailers</h1>
-                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                        <h1>Ricky Martin</h1>
+                        <img src="./img/ricky2.jpg" alt="" class="fotoa">
                         <ul class="bobtopfive">
-                                <li>Three Little Birds</li>
-                                <li>Could You Be Loved</li>
-                                <li>Is This Love</li>
-                                <li>Jamming</li>
-                                <li>One Love / People Get Ready</li>
+                                <li>Livin' la vida loca</li>
+                                <li>La copa de la vida</li>
+                                <li>La Mordidita</li>
+                                <li>Maria</li>
+                                <li>Vente pa'ca</li>
                         </ul>
                 </article>
                 <article class="artista">
-                        <h1>Bob Marley & The Wailers</h1>
-                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
+                        <h1>Harry Styles</h1>
+                        <img src="./img/harry2.png" alt="" class="fotoa">
                         <ul class="bobtopfive">
-                                <li>Three Little Birds</li>
-                                <li>Could You Be Loved</li>
-                                <li>Is This Love</li>
-                                <li>Jamming</li>
-                                <li>One Love / People Get Ready</li>
-                        </ul>
-                </article>
-                <article class="artista">
-                        <h1>Bob Marley & The Wailers</h1>
-                        <img src="./img/bob-marley.jpg" alt="" class="fotobob">
-                        <ul class="bobtopfive">
-                                <li>Three Little Birds</li>
-                                <li>Could You Be Loved</li>
-                                <li>Is This Love</li>
-                                <li>Jamming</li>
-                                <li>One Love / People Get Ready</li>
+                                <li>Adore You</li>
+                                <li>Falling</li>
+                                <li>Lights Up</li>
+                                <li>Sign of the Times</li>
+                                <li>Watermelon Sugar</li>
                         </ul>
                 </article>
             </section>
